# counting_trinangle_IP

./: Cargo.toml
src/: main.rs
src/protocol/: mod.rs  prover.rs  verifier.rs
src/prover/: mod.rs  proof_generation.rs
src/verifier/: mod.rs
