[package]
name = "counting_trinangle_IP"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = "0.3.0"
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-bls12-381 = "0.3.0"
ark-algebra-intro = "0.3.0"
ark-linear-sumcheck = "0.3.0"
ark-serialize = "0.3.0"
ark-r1cs-std = "0.3.1"